--- a/cdk/package.json
+++ b/cdk/package.json
@@ -15,27 +15,23 @@
     "clean": "rm -rf node_modules/ dist/"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.80.0",
-    "@aws-cdk/aws-apigateway": "^1.80.0",
-    "@aws-cdk/aws-iam": "^1.80.0",
-    "@aws-cdk/aws-lambda": "^1.80.0",
-    "@aws-cdk/core": "1.80.0",
-    "@types/jest": "^26.0.10",
+    "@types/jest": "^29.5.4",
     "@types/node": "10.17.27",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
-    "aws-cdk": "1.80.0",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.4.2",
+    "jest": "^29.6.4",
     "prettier": "^2.1.2",
-    "ts-jest": "^26.4.0",
-    "ts-node": "^8.1.0",
-    "typescript": "^3.9.7"
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "@types/aws-lambda": "^8.10.67",
+    "aws-cdk-lib": "^2.93.0",
+    "constructs": "^10.2.69",
     "source-map-support": "^0.5.16"
   }
 }
