--- a/package.json
+++ b/package.json
@@ -17,26 +17,22 @@
     "clean": "rm -rf node_modules/ dist/"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.79.0",
-    "@aws-cdk/aws-iam": "^1.79.0",
-    "@aws-cdk/aws-lambda": "^1.79.0",
-    "@aws-cdk/core": "1.79.0",
+    "@types/aws-lambda": "^8.10.119",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
-    "aws-cdk": "1.79.0",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.4.2",
     "prettier": "^2.1.2",
-    "ts-jest": "^26.4.0",
-    "ts-node": "^8.1.0",
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "@types/aws-lambda": "^8.10.67",
+    "aws-cdk-lib": "^2.93.0",
+    "aws-lambda": "^1.0.7",
+    "constructs": "^10.2.69",
     "mysql2": "^2.2.5",
     "source-map-support": "^0.5.16"
   }
